# Medycyna

./: README.md  gui.py  main.py  nowy.dcm  pyproject.toml  s.py  test.py  tomograf-gui.py  tomograf.ipynb  tomograf.py  transform.py
.ipynb_checkpoints/: tomograf-checkpoint.ipynb
DnoOka/: README.md  machine-learning.ipynb  pyproject.toml
DnoOka/src/: main.py
DnoOka/src/gui/: dicom_gui.py  dno_oka_gui.py  tomograf_gui.py
DnoOka/src/lib/: calc_diff.py  classifier.py  features.py  img_processing.py  model.py  przetwarzanie.py
Tomograf/: pyproject.toml
Tomograf/src/: main.py
Tomograf/src/lib/: dicomloader.py  mse.py
input/: Kolo.dcm  Kropka.dcm  Shepp_logan.dcm  test.dcm  test_write.dcm
output/: Kolo.dcm  Kropka.dcm  Kwadraty2.dcm  Shepp_logan.dcm  shepp_logan.dcm  test.dcm  test.dicom
src/: main.py
src/gui/: dicom_gui.py  tomograf-gui.py  tomograf_gui.py
src/lib/: dicomloader.py  tomograf.py
