[project]
name = "medycyna"
version = "0.1.0"
description = "Tomograf medycyna"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.1",
  "numba>=0.60.0",
  "numpy>=2.1.3",
  "opencv-python>=4.11.0.86",
  "pillow>=11.1.0",
  "pydicom>=3.0.1",
  "pynetdicom>=2.0.2",
  "streamlit>=1.44.1",
]
