[project]
name = "dnooka"
version = "0.1.0"
description = "Wykrywanie naczyń dna siatkówki oka"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.3",
  "numba>=0.60.0",
  "numpy>=2.1.3",
  "opencv-python>=4.11.0.86",
  "pillow>=11.1.0",
  "pydicom>=3.0.1",
  "scikit-image>=0.25.2",
  "scikit-learn-intelex>=2025.5.0",
  "streamlit>=1.44.1",
  "scikit-learn",
  "imbalanced-learn",
  "tabulate>=0.9.0",
]
